--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@auth/mongodb-adapter": "^3.9.0",
     "axios": "^1.8.4",
+    "bcryptjs": "^3.0.2",
     "mongodb": "^6.16.0",
     "mongoose": "^8.13.2",
     "next": "15.3.1",
