update/ complete implementation of products api, added image uploading

--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@auth/mongodb-adapter": "^3.9.0",
     "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.6.0",
     "mongodb": "^6.16.0",
     "mongoose": "^8.13.2",
+    "multiparty": "^4.2.3",
     "next": "15.3.1",
     "next-auth": "^4.24.11",
+    "next-cloudinary": "^6.16.0",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
