--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "mongodb": "^6.16.0",
     "mongoose": "^8.13.2",
     "multiparty": "^4.2.3",
-    "next": "15.3.1",
+    "next": "^15.3.1",
     "next-auth": "^4.24.11",
     "next-cloudinary": "^6.16.0",
     "postcss": "^8.5.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-sortablejs": "^6.1.4",
     "react-spinners": "^0.17.0",
     "sortablejs": "^1.15.6"
